--- a/capa_negocio/Capa_Negocio.csproj
+++ b/capa_negocio/Capa_Negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Barco.cs" />
     <Compile Include="EstrategiaA.cs" />
     <Compile Include="Montecarlo.cs" />
+    <Compile Include="Simulacion.cs" />
     <Compile Include="Tablero.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
