--- a/capa_negocio/Capa_Negocio.csproj
+++ b/capa_negocio/Capa_Negocio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Barco.cs" />
     <Compile Include="EstrategiaA.cs" />
+    <Compile Include="EstrategiaB.cs" />
     <Compile Include="Montecarlo.cs" />
     <Compile Include="Simulacion.cs" />
     <Compile Include="Tablero.cs" />
